# VoxelCarving

./: .gitignore  CMakeLists.txt  README.md  more_blocks.json  new code.cpp  red_block.json  template code
ar_src/: marker_generator.cpp
asset/red_block/: poses.txt
assets/: around_X.csv  image1  image10  image11  image12  image13  image14  image15  image16  image2  image3  image4  image5  image6  image7  image8  image9
assets/red_block_AR/: .mtl  poses.txt
src/: common.h  main.cpp  main8.c__  main_redblock.c__  original_code.c__  readcsv.cpp  rendering.h  utils.h  voxel_carving.h  voxel_colouring.h
voxel_carving/: CMakeLists.txt  package.xml  requirements.txt  setup.py
voxel_carving/config/: config.json
voxel_carving/images/ar_1/: image_1  image_2  image_3  image_4  image_5  image_6  image_7  image_8
voxel_carving/images/ar_10/: image_73  image_74  image_75  image_76  image_77  image_78  image_79  image_80
voxel_carving/images/ar_2/: image_10  image_11  image_12  image_13  image_14  image_15  image_16  image_9
voxel_carving/images/ar_4/: image_25  image_26  image_27  image_28  image_29  image_30  image_31  image_32
voxel_carving/images/ar_5/: image_33  image_34  image_35  image_36  image_37  image_38  image_39  image_40
voxel_carving/images/ar_6/: image_41  image_42  image_43  image_44  image_45  image_46  image_47  image_48
voxel_carving/images/ar_7/: image_49  image_50  image_51  image_52  image_53  image_54  image_55  image_56
voxel_carving/images/ar_8/: image_57  image_58  image_59  image_60  image_61  image_62  image_63  image_64
voxel_carving/images/ar_9/: image_65  image_66  image_67  image_68  image_69  image_70  image_71  image_72
voxel_carving/include/: rendering.h  utils.h  voxelCarver.h  voxelCarverRobotController.h  voxel_colouring.h
voxel_carving/scripts/: cameraPoseFixer.py  cameraPoseVisualizer.py  checkProjection.py  imageSaver.py  imageSegmentator.py  markerDetector.py
voxel_carving/scripts/utils/: cameraPoseVisualizer.py  checkProjection.py  markerDetector.py  voxelsegmentation.py
voxel_carving/src/: voxelCarver.cpp  voxelCarverRobotController.cpp
